<resources>
    <string name="main_greeting">Die Gini Vision Library (GVL) für Android stellt Activities und Fragments zur Verfügung, um Rechnungen und Überweisunsgsträger zu fotografieren, zu prüfen und für die Analyse mit der Gini API vorzubereiten. Es können auch Bilder und PDFs analysiert werden.\n\nDie Gini Vision Library lässt sich in die eigene App integrieren. Sie sehen hier eine Beispiel-Integration.</string>
    <string name="main_title">Gini Vision Library für Android</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="start_gvl_button">Gini Vision Starten</string>
    <string name="gini_vision_logo_description">Gini Vision Library Logo</string>
    <string name="settings_activity_title">Einstellungen</string>
    <string name="settings_versions_header">Versionen</string>
    <string name="settings_links_header">Verknüpfungen</string>
    <string name="settings_configuration_header">Konfiguration</string>
    <string name="settings_links_changelog">GVL Changelog</string>
    <string name="settings_links_documentation">GVL Dokumentation</string>
    <string name="settings_links_github">GVL GitHub</string>
    <string name="configuration_activity_title">Konfiguration</string>
    <string name="gvl_changelog_link">http://developer.gini.net/gini-vision-lib-android/html/changelog.html</string>
    <string name="gvl_documentation_link">http://developer.gini.net/gini-vision-lib-android/html/index.html</string>
    <string name="gvl_github_link">https://github.com/gini/gini-vision-lib-android</string>
    <string name="gvl_display_name">Gini Vision Library</string>
    <string name="api_sdk_display_name">Gini API SDK</string>
    <string name="results_activity_title">Ergebnisse</string>
    <string name="done_button">Fertig</string>
    <string name="amount_label">Betrag</string>
    <string name="payment_recipient_label">Zahlungsempfänger</string>
    <string name="iban_label">IBAN</string>
    <string name="payment_reference_label">Zahlungsreferenz</string>
    <string name="bic_label">BIC</string>
    <string name="no_pdf_results_header">Es konnten keine Daten extrahiert werden.</string>
    <string name="no_pdf_results_headline">Tipps für beste Ergebnisse aus PDFs:</string>
    <string name="pdf_tip_invoice">Verwenden Sie Rechnungen als PDF</string>
    <string name="pdf_tip_native">Verwenden Sie native PDFs</string>
    <string name="pdf_tip_scanned">Vermeiden Sie eingescannte Dokumente als PDFs</string>
    <string name="no_pdf_results_activity_title">Keine PDF-Ergebnisse</string>
    <string name="retry_button">Wiederholen</string>
    <string name="gvl_general_error">Etwas ist schiefgegangen.</string>
    <string name="imported_file_cannot_analyze_error">Leider kann diese Datei nicht bearbeitet werden.</string>
    <string name="imported_file_type_not_supported_error">Nur Dateien vom Format jpg, png, gif oder pdf können analysiert werden.</string>
    <string name="imported_file_too_large_error">Diese Datei ist leider zu groß.</string>
    <string name="imported_file_pdf_too_many_pages_error">Das Dokument darf nicht mehr als 10 Seiten haben.</string>
    <string name="storage_permission_denied_message">Nur mit Datei-Zugriff können gespeicherte Rechnungen hochgeladen werden.</string>
    <string name="grant_access">Zugriff erteilen</string>
    <string name="cancel">Abbrechen</string>
    <string name="storage_permission_rationale">Um gespeicherte Bilder oder PDFs zu analysieren, wird Datei-Zugriff auf dem Gerät benötigt.</string>
    <string name="camera_permission_denied_message">Nur mit Kamera-Zugriff können Sie die Gini Vision Library verwenden.</string>
    <string name="camera_permission_rationale">Um Rechnungen fotografieren zu können, wird Kamera-Zugriff benötigt.</string>
    <string name="ok">OK</string>
    <string name="results_header">Ergebnisse, die für Zahlungsüberweisungen wichtig sind, befinden sich am Anfang der Liste.\n\nBitte überprüfen Sie die Ergebnisse.</string>
    <string name="qrcode_error">Could not use the QR Code. Try again or take a picture of your document.</string>
    <string name="gvl_configuration_title">Gini Vision Library Konfigurieren</string>
    <string name="api_sdk_configuration_title">Gini API SDK Konfigurieren</string>
    <string name="pref_category_client_credentials">Kunden Zugangsdaten</string>
    <string name="pref_title_client_id">Kunden ID</string>
    <string name="pref_title_client_secret">Kunden Geheimnis</string>
    <string name="pref_title_email_domain">E-mail Domain</string>
    <string name="pref_category_api_type">API Type</string>
    <string name="pref_title_api_type">API Type</string>
    <string name="pref_category_base_urls">API URL</string>
    <string name="pref_title_api_url">Gini Api Url</string>
    <string name="pref_title_user_center_url">Gini User Center Url</string>
    <string name="pref_category_requests">Netzwerk</string>
    <string name="pref_title_connection_timeout">Timeout (ms)</string>
    <string name="pref_title_nr_of_retries">Wiederholungen</string>
    <string name="pref_title_backoff_multiplier">Verzögerungsmultiplikator (float)</string>
    <string name="pref_category_onboarding">Onboarding</string>
    <string name="pref_title_show_onboarding_on_first_run">Beim ersten Start anzeigen</string>
    <string name="pref_title_always_show_onboarding">Immer anzeigen</string>
    <string name="pref_category_features">Features</string>
    <string name="pref_title_enable_qr_code_scanning">QR Code Scan einschalten</string>
    <string name="pref_title_enable_file_import">Datei Import einschalten</string>
    <string name="pref_title_document_import_file_types">Dokument Import Dateitypen</string>
    <string name="gvl_configuration_item_title">Gini Vision Library</string>
    <string name="api_sdk_configuration_item_title">Gini API SDK</string>
    <string name="reset_all_configuration_item_title">Alles zurücksetzen</string>
    <string name="pref_title_enable_gvl_debugging">Debugging einschalten</string>
    <string name="pref_category_debug">Debug</string>
    <string name="pref_category_certificate_pinning">Certificate Pinning</string>
    <string name="pref_title_enable_certificate_pinning">Pinning einschalten</string>
    <string name="pref_category_help_screen">Hilfe Screen</string>
    <string name="pref_title_supported_formats_help_screen">Unterstützte Formate anzeigen</string>
</resources>

