<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:overScrollMode="ifContentScrolls"
    tools:context="net.gini.android.gvlexample.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding">

        <Button
            android:id="@+id/startButton"
            style="@style/Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/start_gvl_button"
            android:theme="@style/ThemeOverlay.Button.Colored"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainGreeting"
            android:onClick="launchGiniVision"/>

        <ImageView
            android:id="@+id/ginivisionLogo"
            android:layout_width="@dimen/ginivision_logo_width"
            android:layout_height="@dimen/ginivision_logo_height"
            android:contentDescription="@string/gini_vision_logo_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ginivision_logo_white" />

        <TextView
            android:id="@+id/mainGreeting"
            style="@style/TextAppearance.Body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_text_body_margin"
            android:text="@string/main_greeting"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ginivisionLogo" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
