<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/headerText"
        style="@style/TextAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:drawableLeft="@drawable/alert_icon"
        android:drawablePadding="@dimen/default_padding"
        android:drawableStart="@drawable/alert_icon"
        android:gravity="center_vertical"
        android:padding="@dimen/default_padding"
        android:text="@string/no_pdf_results_header" />

    <View
        android:id="@+id/headerSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/headerText"
        android:background="#eee" />

    <TextView
        android:id="@+id/headlineText"
        style="@style/Gini.TextAppearance.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerSeparator"
        android:padding="@dimen/default_padding"
        android:text="@string/no_pdf_results_headline" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/headlineText"
        android:overScrollMode="ifContentScrolls">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:padding="@dimen/default_padding"
                        android:src="@drawable/tip_do_icon_background" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:padding="@dimen/default_padding"
                        app:srcCompat="@drawable/tip_do_icon_foreground" />

                </RelativeLayout>

                <TextView
                    style="@style/TextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/default_margin"
                    android:gravity="center_vertical"
                    android:text="@string/pdf_tip_invoice" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:padding="@dimen/default_padding"
                        android:src="@drawable/tip_do_icon_background" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:padding="@dimen/default_padding"
                        app:srcCompat="@drawable/tip_do_icon_foreground" />

                </RelativeLayout>

                <TextView
                    style="@style/TextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/default_margin"
                    android:gravity="center_vertical"
                    android:text="@string/pdf_tip_native" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:padding="@dimen/default_padding"
                        android:src="@drawable/tip_dont_icon_background" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:padding="@dimen/default_padding"
                        app:srcCompat="@drawable/tip_dont_icon_foreground" />

                </RelativeLayout>

                <TextView
                    style="@style/TextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/default_margin"
                    android:gravity="center_vertical"
                    android:text="@string/pdf_tip_scanned" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>